--- a/woo-ah-hana-web/src/app/globals.css
+++ b/woo-ah-hana-web/src/app/globals.css
@@ -19,3 +19,17 @@ body {
   background: var(--background);
   font-family: Arial, Helvetica, sans-serif;
 }
+
+/* 기본 메뉴 항목 스타일 */
+.custom-menu .ant-menu-item {
+  color: gray; /* 선택되지 않은 메뉴는 회색 */
+  transition: color 0.3s ease; /* 부드러운 전환 효과 */
+  font-size: large;
+  font-weight: bold;
+}
+
+/* 선택된 메뉴 항목 스타일 */
+.custom-menu .ant-menu-item-selected {
+  color: #527FF7;
+  font-weight: bold; /* 강조 */
+}
