[refactor] 모임통장에 입금 개선

--- a/woo-ah-hana-web/src/app/globals.css
+++ b/woo-ah-hana-web/src/app/globals.css
@@ -81,3 +81,9 @@ body {
   .ant-picker-header-next-btn {
   visibility: hidden !important;
 }
+
+.ant-message {
+  position: absolute;
+  bottom: 120px !important;
+  top: unset !important;
+}
